dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/daqhwy.h)

AC_LANG_CPLUSPLUS

dnl Define a g++ version check macro
AC_DEFUN([AC_GXX_VERSION_CHECK],
[CXXVEROK=`echo $CXX_STR_VERSION | [sed 's/2\.9[5-6]\.[[:digit:]+]/yes/'] | [sed 's/3\.3\.[[:digit:]]/yes/'] | [sed 's/4\.0\.[[:digit:]]/yes/']`])

dnl Define a cpp version check macro
AC_DEFUN([AC_CPP_VERSION_CHECK],
[CPPVEROK=`echo $CPP_STR_VERSION | [sed 's/2\.9[5-6]\.[[:digit:]+]/yes/'] | [sed 's/3\.3\.[[:digit:]]/yes/'] | [sed 's/4\.0\.[[:digit:]]/yes/']`])

dnl Define a g++ check macro for g++ 2.96.xx
AC_DEFUN([AC_GXX_VERSION_296],
[CXXVER296=`echo $CXX_STR_VERSION | [sed 's/2\.96\.[[:digit:]+]/yes/'] | [sed 's/2\.96/yes/']`])

dnl First let's do the package version
DAQHWY_VERSION=`cat RELEASE`
AC_DEFINE_UNQUOTED(DAQHWY_VERSION,"$DAQHWY_VERSION")
AC_SUBST(DAQHWY_VERSION)

TOPDIR=`pwd`
AC_SUBST(TOPDIR)

dnl don't warn about long long usage
CFLAGS="$CFLAGS -Wno-long-long"
CXXFLAGS="$CXXFLAGS -Wno-long-long"

dnl need to do this before AC_PROG_CC and AC_PROG_CXX
gdb_debugging="yes"

AC_ARG_ENABLE(gdb-debugging,[  --enable-gdb-debugging (disabled by default) Use full gdb debugging when compiling],gdb_debugging="$enableval",gdb_debugging="no")

if test "$gdb_debugging" = "yes"; then
  CFLAGS="$CFLAGS -ggdb2 -g2"
  CXXFLAGS="$CXXFLAGS -ggdb2 -g2"
fi

dnl need to do this before AC_PROG_CC and AC_PROG_CXX
gprof_profiling="yes"

AC_ARG_ENABLE(gprof-profiling,[  --enable-gprof-profiling (disabled by default) Create gprof profiling data while compiling],gprof_profiling="$enableval",gprof_profiling="no")

if test "$gprof_profiling" = "yes"; then
  CFLAGS="$CFLAGS -pg"
  CXXFLAGS="$CXXFLAGS -pg"
fi

dnl need to do this before AC_PROG_CC and AC_PROG_CXX
compilation_warnings="yes"

AC_ARG_ENABLE(compilation_warnings,[  --disable-compilation-warnings (enabled by default) Disable explicitly requested compilation warning messages],compilation_warnings="$enableval",compilation_warnings="yes")

if test "$compilation_warnings" = "yes"; then
  CFLAGS="$CFLAGS -O3 -Wshadow -Wunused -Wreturn-type -Wuninitialized"
  CXXFLAGS="$CXXFLAGS -O3 -Wshadow -Wunused -Wreturn-type -Wuninitialized"
fi

dnl Should we display compilation commands
build_verbose="no"
AT_BUILD="@"

AC_ARG_ENABLE(verbose-build,[  --enable-verbose-build (disabled by default) Allow compilation commands to be displayed while compiling],build_verbose="$enableval",build_verbose="no")

if test "$build_verbose" = "yes"; then
  AT_BUILD=""
fi

AC_DEFINE_UNQUOTED(AT_BUILD,"$AT_BUILD")
AC_SUBST(AT_BUILD)

dnl program checks
AC_PROG_CC(gcc) 
AC_PROG_CXX(g++)
AC_PROG_CXXCPP
AC_PROG_RANLIB
AC_CHECK_PROG(AR,ar,ar rs,:)
AC_CHECK_PROG(CP,cp,cp -f,:)
AC_CHECK_PROG(MAKEDEP,makedepend,makedepend -f .depend,:)
AC_CHECK_PROG(TOUCH,touch,touch,:)
AC_CHECK_PROG(INSTALL,install,install -m 0644,cp -f)
AC_CHECK_PROG(DIRINST,install,install -d -m 0755,cp -f)
AC_CHECK_PROG(BININST,install,install -m 0755,cp -f)
AC_CHECK_PROG(MKDIR,mkdir,mkdir -p,:)

dnl If we didn't get the ar program then fail
if test "x$AR" = "x:"; then 
  AC_MSG_ERROR([
*** Can not locate program ar, don't know how to create libraries. 
Check 'config.log' for *** more details.])
fi

AC_SUBST(AR)
AC_SUBST(GXX)

dnl Allow the user to force compile with wrong compiler/versions
force_build="no"
AC_ARG_ENABLE(force-build,[  --enable-force-build (disabled by default) force build with wrong compiler/versions],force_build="$enableval",force_build="no")

GXX_TESTED_VERSIONS="2.95.xx 2.96.xx 3.3.3 3.3.xx"

dnl Not using g++ maybe trouble
if test "x$GXX" != "xyes" -a "x$force_build" != "xyes"; then
  AC_MSG_ERROR([
***********************************************************************
*** g++ (the GNU c++ compiler) is strongly suggested for compiling this 
*** program.  Check 'config.log' for *** more details.
*** Force using --enable-force-build.
***********************************************************************])
fi

dnl Maybe we want to compile with a different version of gcc
COMPILER_VERSION=

AC_MSG_CHECKING(for compiler Version flag) 
AC_ARG_WITH(compiler-version,[  --with-compiler-version(default \"\") version of the compiler to use for building],COMPILER_VERSION="-V $withval",COMPILER_VERSION="$COMPILER_VERSION")
AC_MSG_RESULT($COMPILER_VERSION)

AC_SUBST(COMPILER_VERSION)

dnl Check the g++ and cpp versions
CXX_STR_VERSION=`$CXX $COMPILER_VERSION -dumpversion`
AC_DEFINE_UNQUOTED(CXX_STR_VERSION,"$CXX_STR_VERSION")
AC_SUBST(CXX_STR_VERSION)

CPP_STR_VERSION=`$CXXCPP $COMPILER_VERSION -dumpversion`
AC_DEFINE_UNQUOTED(CPP_STR_VERSION,"$CPP_STR_VERSION")
AC_SUBST(CPP_STR_VERSION)

dnl Check if c++ version is ok
CXXVEROK="no"
AC_GXX_VERSION_CHECK($CXX_STR_VERSION)
if test "x$CXXVEROK" != "xyes" -a "x$force_build" != "xyes"; then
  AC_MSG_ERROR([
***********************************************************************
*** compilation of this program has only been tested for g++ versions:
***   $GXX_TESTED_VERSIONS
*** Please check that you are using a tested version of g++.  
*** Force using --enable-force-build.
***********************************************************************])
fi

dnl Check if cpp version is ok
CPPVEROK="no"
AC_CPP_VERSION_CHECK($CPP_STR_VERSION)
if test "x$CPPVEROK" != "xyes" -a "x$force_build" != "xyes"; then
  AC_MSG_ERROR([
***********************************************************************
*** compilation of this program has only been tested for cpp versions:
***   $GXX_TESTED_VERSIONS
*** Please check that you are using a tested version of GNU cpp.  
*** Force using --enable-force-build.
***********************************************************************])
fi

dnl Checks for compiler/system peculiarities
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(void *)
AC_C_BIGENDIAN
dnl AC_C_CONST
dnl AC_C_INLINE

dnl Checks for header files.
AC_CONFIG_HEADER(daqconfig.h)
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/stat.h sys/types.h sys/mman.h)
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h errno.h math.h ctype.h)
AC_CHECK_HEADERS(malloc.h netdb.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

dnl Checks for library functions.
AC_FUNC_MMAP
AC_FUNC_SETPGRP
AC_CHECK_FUNCS(mmap)
AC_CHECK_FUNCS(strerror)
AC_CHECK_FUNCS(snprintf)
AC_CHECK_FUNCS(set_new_handler)
AC_CHECK_FUNCS(set_unexpected)
AC_CHECK_FUNCS(set_terminate)
AC_CHECK_FUNCS(abort)
AC_CHECK_FUNCS(malloc) 
AC_CHECK_FUNCS(realloc) 
AC_CHECK_FUNCS(calloc) 
AC_CHECK_FUNCS(free) 
AC_EGREP_HEADER(malloc,stdlib.h,AC_DEFINE(HAVE_DECL_MALLOC),)
AC_EGREP_HEADER(realloc,stdlib.h,AC_DEFINE(HAVE_DECL_REALLOC),)
AC_EGREP_HEADER(calloc,stdlib.h,AC_DEFINE(HAVE_DECL_CALLOC),)
AC_EGREP_HEADER(free,stdlib.h,AC_DEFINE(HAVE_DECL_FREE),)
AC_EGREP_HEADER(h_errno,netdb.h,AC_DEFINE(HAVE_DECL_H_ERRNO),)

makedep_header=""
AC_CHECK_HEADER(g++-v3/iostream.h, makedep_header="$makedep_header -I/usr/include/g++-3")
AC_CHECK_HEADER(g++/iostream.h, makedep_header="-I/usr/include/g++")
AC_CHECK_HEADER(c++/iostream.h, makedep_header="$makedep_header -I/usr/include/c++")
AC_CHECK_HEADER(cxx/iostream.h, makedep_header="$makedep_header -I/usr/include/cxx")
AC_CHECK_HEADER(h++/iostream.h, makedep_header="$makedep_header -I/usr/include/h++")
AC_CHECK_HEADER(hxx/iostream.h, makedep_header="$makedep_header -I/usr/include/hxx")
AC_SUBST(makedep_header)

dnl Check for pstat
AC_CHECK_HEADER(sys/pstat.h, AC_DEFINE(HAVE_SYS_PSTAT_H), no_sys_pstat=yes)

set_procname="yes"

AC_ARG_ENABLE(set-procname,[  --disable-set-procname (enabled by default) Set process status line name],set_procname="$enableval",set_procname="yes")

if test "$set_procname" = "no"; then
  AC_DEFINE(NO_SET_PROCNAME)
  AC_MSG_WARN(Setting of process status line name not enabled)
fi

delete_strstream="no"

AC_ARG_ENABLE(delete-strstream,[  --enable-delete-strstream (disabled by default) Delete dynamic strstream memory],delete_strstream="$enableval",delete_strstream="no")

if test "$delete_strstream" = "no"; then
  AC_DEFINE(NO_DELETE_STRSTREAM)
  AC_MSG_WARN(Deletion of dynamic strstream memory disabled.)
fi

AC_OUTPUT(config.make scripts/daqhighway-conf src/Man/doxy/Doxyfile)

dnl Check if c++ version warnings
CXXVER296="no"
AC_GXX_VERSION_296($CXX_STR_VERSION)
if test "x$CXXVER296" == "xyes"; then
  AC_MSG_WARN([
***********************************************************************
*** compilation of this program using g++ 2.96.xx is known to take  
*** a rather long time.  This problem appears to be a gcc 
*** problem/feature.  Compilation appears to produce a working
*** version of SpectroDAQ.  However, you may want to go to lunch
*** shortly after starting the compilation.
***********************************************************************])
fi

